--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "list-to-tabs"
 version = "0.1.0"
-edition = "2024"
 
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
+
+[[bin]]
+name="list-to-tabs"
+
