Trial Crates Publish

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Get Version
+      - name: Get Tag Version
         run: echo GIT_VERSION=$(git describe --tags) >> $GITHUB_ENV
       - name: Prepare Git
         run: |
